# SuperMemorization

./: ..gitigonre.swp  README.md  pyproject.toml
SuperMemorization/: db.sqlite3  manage.py
SuperMemorization/Card/: .gitignore  admin.py  filters.py  models.py  serializers.py  urls.py  views.py
SuperMemorization/Card/migrations/: 0001_initial.py  0002_alter_deck_user_id.py
SuperMemorization/Card/templates/: about.html  index.html
SuperMemorization/SuperMemorization/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
docker/python/: Dockerfile
